--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -3,7 +3,9 @@ font-family: "Lato", Arial, sans-serif;
 margin: 0;
 padding: 0; 
 background: #818589;
-background-image: url("backgroundimage1.jpg");
+background-image: url("https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/backgroundimage2.jpg");
+background-repeat: no-repeat;
+background-size: 100% 100%;
 color: #3f3f3f;
 font-size: 16px;
 line-height: 24px;
