--- a/m05/c04.css
+++ b/m05/c04.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Wellfleet);
 
 body {
 	background-color: #523620;
@@ -17,9 +16,6 @@ h1 {
 	width: 643px;
 	margin: 40px auto;}
 
-#teacher {
-	float:right;
-	margin:0px 30px 0px 0px;}
 #teacher2 {
 	float:right;
 	margin:135px 30px 0px 0px;}
@@ -30,16 +26,8 @@ h1 {
 	padding: 10px;
 	min-width: 779px;}
 #page2 {
-	height: 730px;}
-
-#answer {
-	border: 12px double #fff;
-	color: #523620;
-	text-align: left;
-	padding: 20px;
-	margin: 70px auto 10px auto;
-	width: 250px;
-	text-align: center;}
+	height: 730px;
+}
 
 #blackboard {
 	background-color: #425a5a;
