--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -119,6 +119,33 @@ border-top: 1px solid #1f1f1f;
 #footer a { color: #fff; text-decoration: none; border-bottom: 1px dotted #fff; }
 #footer a:hover { border-bottom: 1px dotted #ccc; }
 
-.left { float: left; }
+.left { 
+    float: left;
+}
+
+.left img{
+    height: 31px;
+    width: 88px;
+}
+
 .right { float: right; }
 .clear { clear: both; }
+
+.row{
+    display: flex;
+}
+
+.column-1{
+    flex: 1;
+    margin-right: 10px;
+}
+
+.column-2{
+    flex: 1;
+}
+
+img{
+    width: 450px;
+    height: auto;
+    object-fit: fill;
+}
