--- a/a4/css/art4.css
+++ b/a4/css/art4.css
@@ -5,8 +5,7 @@
 
 body {
     text-align: center;
-    background-image: url("../art4/images/andy-holmes_1.jpg");
-    background-repeat: no-repeat;
+    background-color: #36454F;
 }
 
 form {
