--- a/finalp1/css/style.css
+++ b/finalp1/css/style.css
@@ -3,7 +3,7 @@ font-family: "Lato", Arial, sans-serif;
 margin: 0;
 padding: 0; 
 background: #818589;
-background-image: url("/images/backgroundimage2.jpg"); 
+background-image: url("https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/finalp1/images/backgroundimage2.jpg"); 
 background-repeat: no-repeat;
 background-size: 100% 100%;
 background-attachment: fixed; 
